parser/parser_tests/tests_input/unit/good/Good43.ty
singleton class StudentFactory { 
    
    functions: {
        getStudent: () -> Student = {
            Student(Random.getString(), Random.getInt())
        }
    }
}
