parser/parser_tests/tests_input/unit/bad/Bad19.ty
singleton class Random { 
    
    functions: {
        randomValue: (seed: Int) -> Int = {
            313
        } with values: x, y: Int = 16
    }
}
